--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-camera": "^3.0.1",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
