--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.0",
+    "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
+    "react-apollo": "^3.0.1",
     "react-native": "0.60.4",
     "react-native-camera": "^3.0.1",
     "react-native-gesture-handler": "^1.3.0",
