--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.1",
     "@react-native-community/async-storage": "^1.6.1",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-http": "^1.5.15",
     "graphql": "^14.5.0",
     "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
