--- a/package.json
+++ b/package.json
@@ -13,34 +13,37 @@
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
-    "graphql": "^14.5.0",
+    "graphql": "^14.5.4",
     "graphql-tag": "^2.10.1",
+    "jetifier": "^1.6.4",
     "prop-types": "^15.7.2",
-    "react": "16.8.6",
+    "react": "16.9.0",
     "react-apollo": "^3.0.1",
-    "react-native": "0.60.4",
-    "react-native-camera": "^3.0.1",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native": "0.60.5",
+    "react-native-camera": "^3.3.1",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^4.0.0",
+    "react-navigation-stack": "^1.5.1",
+    "react-navigation-tabs": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.8.0",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6"
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
