--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-apollo": "^3.1.1",
     "react-native": "0.61.1",
     "react-native-camera": "^3.6.0",
+    "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
@@ -35,6 +36,7 @@
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.0",
     "eslint-config-airbnb": "^18.0.1",
