--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.1",
-    "react-navigation-tabs": "^2.5.5"
+    "react-navigation-tabs": "^2.5.5",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
