--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "module": "es2015"
+    "module": "es6",
+    "moduleResolution": "node"
   },
   "exclude": ["node_modules"]
 }
