--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.1",
     "react-navigation-tabs": "^2.5.5",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
