--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
-    "react": "16.11.0",
+    "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-native": "0.61.2",
     "react-native-camera": "^3.8.0",
+    "react-native-fs": "^2.16.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -32,6 +33,9 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "shorthash": "^0.0.2",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
