--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/netinfo": "^4.6.0",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-link": "^1.2.13",
     "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.12",
     "apollo-link-token-refresh": "^0.2.7",
     "apollo-upload-client": "^11.0.0",
     "graphql": "^14.5.8",
