--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native": "0.61.2",
     "react-native-camera": "^3.8.0",
     "react-native-fs": "^2.16.1",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "1.4.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
